# osuExchange

./: .gitignore  README.md  api.py  auth.py  beatmap.py  config.json  download_score.py  exception.py  get-beatmap-attributes.py  get-score.py  get-user-beatmap-scores.py  get-users.py  models.py  pyproject.toml  save_token_to_file.py  setup.py  structures.py  test.py
auth/: README.md  auth.py  auth_without_oop.py  config.json
osuExchange/: __init__.py  api.py  auth.py  beatmap.py  beatmaps.py  client.py  endpoints.py  enums.py  exception.py  scores.py  seasonalbg.py  structures.py  typing.py  unauth_endpoints.py  undocumented.py  updates.py  user.py  users.py  util.py
test/: get-beatmap-scores.py  get-beatmap.py  get-user.py
testing/: get-beatmap-attributes.py  get-beatmaps.py  get-seasonal-backgrounds.py  save_token_to_file.py
